--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "fnd.js",
   "repository": "http://github.com/hogart/fnd.git",
   "devDependencies": {
-    "chai": "^2.1.1",
-    "eslint": "^0.16.1",
-    "jscs": "^1.11.3",
+    "chai": "^2.2.x",
+    "eslint": "^0.18.x",
+    "jscs": "^1.12.x",
     "mocha": "^2.2.1",
     "opn": "^1.0.1"
   },
